--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
 group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
+application { mainClass.set("hexlet.code.Main") }
 
 repositories {
     mavenCentral()
