--- a/app/.gitignore
+++ b/app/.gitignore
@@ -4,6 +4,18 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# Ignore Gradle build output directory
+build
+
+**/logs/
+
+.settings
+bin
+.project*
+.classpath
+.idea/
+.factorypath
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -18,10 +30,7 @@ out/
 
 ### Eclipse ###
 .apt_generated
-.classpath
-.factorypath
 .project
-.settings
 .springBeans
 .sts4-cache
 bin/
