--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,19 +4,24 @@ plugins {
     id 'jacoco'
     id 'application'
     id 'com.adarshr.test-logger' version '3.2.0'
+    id("com.github.johnrengelman.shadow") version "8.1.1"
 }
 
 group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
-application { mainClass.set("hexlet.code.Main") }
+application { mainClass.set("hexlet.code.App") }
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-//    testImplementation platform('org.junit:junit-bom:5.9.1')
-//    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation("gg.jte:jte:3.1.9")
+    implementation("org.slf4j:slf4j-simple:2.0.9")
+    implementation("io.javalin:javalin:6.1.3")
+    implementation("io.javalin:javalin-bundle:6.1.3")
+    implementation("io.javalin:javalin-rendering:6.1.3")
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
     testImplementation 'org.assertj:assertj-core:3.24.2'
