--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation("io.javalin:javalin-bundle:6.1.3")
     implementation("io.javalin:javalin-rendering:6.1.3")
 
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.1.0'
+    implementation('com.h2database:h2:2.2.224')
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
     testImplementation 'org.assertj:assertj-core:3.24.2'
